# memoria

./: Cargo.toml  README.md  TODO.md  build.sh
.cursor/rules/: project-context.mdc
notes/: welcome.md
src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  notes.rs  test.rs  utils.rs
