[package]
name = "memoria"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
toml = "0.8"

# Configuration pour activer tous les warnings de clippy
[profile.dev]
opt-level = 0
debug = true

# Activer tous les warnings de clippy
[profile.release]
opt-level = 3
debug = false

# Configuration pour clippy
[workspace.metadata.clippy]
all-targets = true
